--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~38.0.8",
-    "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "expo": "~37.0.3",
+    "expo-constants": "^9.0.0",
+    "formik": "^2.1.4",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-web": "~0.11.7",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
